--- a/portfolio/css/timeline.css
+++ b/portfolio/css/timeline.css
@@ -207,6 +207,16 @@ html {
   background: url("../images/logo-docker.png") 50% 50% no-repeat;
   background-size: 22px;
 }
+
+.i-rails:before {
+  content: "";
+  display: block;
+  width: 40px;
+  height: 40px;
+  background: url("../images/logo-rails.svg") 50% 50% no-repeat;
+  background-size: 22px;
+}
+
 /* navbar - dark mode */
 
 .navbar-custom .nav li a,
